# DL_Taller1

./: Perceptron_Unicapa.ipynb  README.md  Taller1DL.ipynb  X_train.npy  X_val.npy  preprocessor.joblib  pyproject.toml  y_train.npy
preprocessed_data/: X_test.npy  y_test.npy  y_val.npy
